# product-agent

./: .env.example  .gitignore  CLAUDE.md  MANIFEST.in  README.md  ROADMAP.md  SESSION_CONTEXT.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
agent/: __init__.py  api.py  checkpoints.py  cli_runner.py  config.py  history.py  main.py  orchestrator.py  progress.py  quality.py  recovery.py  sanitize.py  state.py  test_validation.py  validation.py  validators.py
agent/agents/: __init__.py  definitions.py
agent/domains/: __init__.py
agent/domains/ai_app/: patterns.md
agent/domains/content_site/: patterns.md
agent/domains/internal_tool/: patterns.md
agent/domains/marketplace/: patterns.md
agent/domains/plugin_host/: patterns.md
agent/domains/plugin_module/: patterns.md
agent/domains/saas/: patterns.md
agent/features/: __init__.py  templates.py
agent/hooks/: __init__.py  progress.py  safety.py
agent/mcp/: __init__.py  servers.py
agent/phases/: __init__.py  analyze.py  audit.py  build.py  deploy.py  design.py  enhance.py  enrich.py  review.py  test.py  verify.py
agent/stacks/: __init__.py  criteria.py  selector.py
agent/stacks/templates/astro/: builder.md  deploy.md  patterns.md  scaffold.md  tests.md
agent/stacks/templates/django-htmx/: builder.md  deploy.md  patterns.md  scaffold.md  tests.md
agent/stacks/templates/expo-supabase/: builder.md  deploy.md  patterns.md  scaffold.md  tests.md
agent/stacks/templates/nextjs-prisma/: builder.md  deploy.md  patterns.md  scaffold.md  tests.md
agent/stacks/templates/nextjs-supabase/: builder.md  deploy.md  patterns.md  scaffold.md  tests.md
agent/stacks/templates/rails/: builder.md  deploy.md  patterns.md  scaffold.md  tests.md
agent/stacks/templates/sveltekit/: builder.md  deploy.md  patterns.md  scaffold.md  tests.md
agent/stacks/templates/swift-swiftui/: builder.md  deploy.md  patterns.md  (+4 more)
reference/nocloud/: APP_CONTEXT.md
templates/: CHANGELOG.md  DESIGN.md  PRODUCT.md  TASKS.md
tests/: __init__.py  test_agent_prompts.py  test_api.py  test_checkpoints.py  test_cli_runner.py  test_config.py  test_enhancement.py  test_history.py  test_mcp_servers.py  test_new_stacks.py  test_nocloud_domains.py  test_orchestration.py  test_orchestrator_v8.py  test_phases.py  test_pipeline_features.py  test_progress.py  test_quality.py  test_recovery.py  test_safety.py  test_sanitize.py  test_stack_selection.py  test_stacks_criteria.py  test_state_v5.py  test_state_v6.py  test_swift_modes.py  test_v10_integration.py  test_validation.py  test_validators.py
tests/stress/: conftest.py  run_chain.py  test_phase_analysis.py  test_phase_audit.py  test_phase_build.py  test_phase_design.py  test_phase_review.py  test_validators_stress.py
tests/stress/fixtures/: original_prompt.md  original_prompt_simple.md
(+5 files in other folders)
